# rust-ananicy

./: .SRCINFO  AUR_SUBMISSION.md  Cargo.toml  PKGBUILD  README.md  build.sh  rust-ananicy-1.0.0-1-x86_64.pkg.tar.zst  rust-ananicy-debug-1.0.0-1-x86_64.pkg.tar.zst  rust-ananicy.service
configs/: 00-default.cgroups  20-browsers.rules  30-development.rules  50-gaming.rules
pkg/rust-ananicy/: .BUILDINFO  .MTREE  .PKGINFO
pkg/rust-ananicy-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/rust-ananicy/etc/ananicy.d/: 40-applications.rules
pkg/rust-ananicy/usr/lib/systemd/system/: rust-ananicy.service
pkg/rust-ananicy/usr/share/doc/rust-ananicy/: CONFIGURATION.md
src/: cgroup.rs  process.rs  rules.rs  utils.rs
src/rust-ananicy-1.0.0/: AUR_MARKETING.md  Makefile  PKGBUILD  build.sh  install.sh
src/rust-ananicy-1.0.0/configs/: 00-types.types  10-desktop.rules  80-background.rules  ananicy.conf
src/rust-ananicy-1.0.0/src/: config.rs  main.rs
