[package]
name = "rust-ananicy"
version = "0.1.0"
edition = "2021"

[dependencies]
procfs = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = "0.29"
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.20"
regex = "1.11"
notify = "7.0"
tokio = { version = "1.42", features = ["full"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true